Added remaining Tenancy APIs.
